--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         fragment_ktx_version = '1.4.1'
         recyclerview_version = '1.2.1'
         viewModel_version = '2.4.1'
+        swipe_refresh_version = '1.1.0'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt_version"
